修改连接池

--- a/xxl-job-executor-samples/xxl-job-executor-sample-springboot/src/main/resources/config/dbsource.properties
+++ b/xxl-job-executor-samples/xxl-job-executor-sample-springboot/src/main/resources/config/dbsource.properties
@@ -1,13 +1,14 @@
+##mysql
 c3p0.db1.jdbcUrl=jdbc:mysql://10.36.6.133:3306/htdf-collect?useUnicode=true&characterEncoding=UTF-8
 c3p0.db1.user=root
 c3p0.db1.password=root
 c3p0.db1.driverClass=com.mysql.jdbc.Driver
-
-c3p0.db2.jdbcUrl=jdbc:mysql://10.36.6.133:3306/htdf-collect?useUnicode=true&characterEncoding=UTF-8
-c3p0.db2.user=root
-c3p0.db2.password=root
-c3p0.db2.driverClass=com.mysql.jdbc.Driver
-
+##oracle
+c3p0.db2.jdbcUrl=jdbc:oracle:thin:@10.20.71.29:1521:orcl
+c3p0.db2.user=cinrad
+c3p0.db2.password=cinrad
+c3p0.db2.driverClass=oracle.jdbc.driver.OracleDriver
+##public 
 c3p0.minPoolSize=2
 c3p0.maxPoolSize=10
 c3p0.maxIdleTime=1800000
